change deafult user

--- a/buildout.base.cfg
+++ b/buildout.base.cfg
@@ -30,7 +30,7 @@ extensions = mr.developer
 versions = versions
 show-picked-versions = true
 
-plone-user = admin:admin
+plone-user = prabhatech:tDZXoB8@8!2J
 
 develop = .
 sources = sources
